  * Added a new extension to speed up w-projection gridding
  * Merged the non-windowed and windowed functions in the lsl.correlator extensions to de-duplicate some of the codebase
  * Added support for reading CASA measurement sets with multiple spectral windows
  * Added test suites for CASA measurement set support when the 'casacore' module is found

1.2.4
  * Fixed a bug in driftcurve.py that put a cos(decliation) correction into the LFSM runs
  * Updated the documentation to reflect that unittest2 is now required as of 1.2.2 for Python 2.6 support
  * Added argparse as an extra dependency for Python 2.6
  * Moved the scripts that ship with LSL to argparse for command line parsing
  * Added a new lsl.misc.parser module to help with the switch over to argparse
  * Updated the minimum PyEphem version of 3.5.7.3
  * Fixed a bug in lsl.misc.ionosphere that causes some UQR files to fail to parse
  * Updated the URL/filename structure used to download the CODE files in lsl.misc.ionosphere

1.2.3
  * Fixed a problem with the conditional dependencies in setup.py for older versions of setuptools
  * Increased the default ring segment count for lsl.reader.buffer.DRXFrameBuffer to better deal with LWA-SV data
  * Increased the number of frames examined by lsl.reader.ldp.DRXFile to better deal with LWA-SV data

1.2.2
  * Bumped the minimum PyFITS version to 3.2
  * Fixed a bug in setup.py that causes it to crash when 'pkg-config' is not installed
  * Fixed a memory leak in the new, more flexible lsl.reader modules
  * Fixed a problem with the data ordering in the lsl.writer modules when a high time resolution (<~2 ms) is used
  * Fixed a bug in the DR spectrometer reader which incorrectly mapped tuning 2, Stokes I for IQUV-mode observations
  * Fixed a bug in the new measurement set writer
  * Added multiple IF support to the FITS IDI writer and reader
  * Added multiple IF/spectral window support to the CASA measurement set writer